err/qcodes.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyVISA-1.8.egg-info'...
Listing './lib/python3.5/site-packages/h5py'...
Listing './lib/python3.5/site-packages/h5py/.libs'...
Listing './lib/python3.5/site-packages/h5py/_hl'...
Listing './lib/python3.5/site-packages/h5py/tests'...
Listing './lib/python3.5/site-packages/h5py/tests/hl'...
Listing './lib/python3.5/site-packages/h5py/tests/old'...
Listing './lib/python3.5/site-packages/h5py-2.7.1.dist-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyvisa'...
Listing './lib/python3.5/site-packages/pyvisa/compat'...
Listing './lib/python3.5/site-packages/pyvisa/ctwrapper'...
Listing './lib/python3.5/site-packages/pyvisa/resources'...
Listing './lib/python3.5/site-packages/pyvisa/testsuite'...
Listing './lib/python3.5/site-packages/pyvisa/thirdparty'...
Listing './lib/python3.5/site-packages/qcodes'...
Listing './lib/python3.5/site-packages/qcodes/config'...
Listing './lib/python3.5/site-packages/qcodes/data'...
Listing './lib/python3.5/site-packages/qcodes/instrument'...
Listing './lib/python3.5/site-packages/qcodes/instrument/mockers'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/Advantech'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/AlazarTech'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/HP'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/Harvard'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/Keysight'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/Lakeshore'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/QDev'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/QuTech'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/Spectrum'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/Spectrum/py_header'...
Compiling './lib/python3.5/site-packages/qcodes/instrument_drivers/Spectrum/py_header/h2py.py'...
***   File "./lib/python3.5/site-packages/qcodes/instrument_drivers/Spectrum/py_header/h2py.py", line 138
    exec stmt in env
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/ZI'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/agilent'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/american_magnetics'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/ithaco'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/oxford'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/rigol'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/rohde_schwarz'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/signal_hound'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/stanford_research'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/tektronix'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/weinschel'...
Listing './lib/python3.5/site-packages/qcodes/instrument_drivers/yokogawa'...
Listing './lib/python3.5/site-packages/qcodes/math'...
Listing './lib/python3.5/site-packages/qcodes/plots'...
Listing './lib/python3.5/site-packages/qcodes/tests'...
Listing './lib/python3.5/site-packages/qcodes/utils'...
Listing './lib/python3.5/site-packages/qcodes-0.1.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
